crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__file[parquet]-duckdb[memory]_tpch_simple_q6_explain.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: tpch_simple_q6"
---
+---------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                         |
+---------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Federated                                                                                                                                                                    |
|               |  Limit: skip=0, fetch=10                                                                                                                                                     |
|               |   Projection: c.key                                                                                                                                                          |
|               |     SubqueryAlias: c                                                                                                                                                         |
|               |       Projection: orders.o_orderkey + Int64(1) AS key                                                                                                                        |
|               |         TableScan: orders projection=[o_orderkey]                                                                                                                            |
| physical_plan | SchemaCastScanExec                                                                                                                                                           |
|               |   CooperativeExec                                                                                                                                                            |
|               |     BytesProcessedExec                                                                                                                                                       |
|               |       VirtualExecutionPlan name=duckdb compute_context=:memory: base_sql=SELECT "c"."key" FROM (SELECT ("c"."o_orderkey" + 1) AS "key" FROM "orders" AS "c") AS "c" LIMIT 10 |
|               |                                                                                                                                                                              |
+---------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
