crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__file[parquet]-duckdb[memory]_tpch_simple_q7_explain.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: tpch_simple_q7"
---
+---------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                         |
+---------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Federated                                                                                                                                                                    |
|               |  Limit: skip=0, fetch=10                                                                                                                                                     |
|               |   Projection: c.key                                                                                                                                                          |
|               |     SubqueryAlias: c                                                                                                                                                         |
|               |       Projection: orders.o_orderkey AS key                                                                                                                                   |
|               |         Limit: skip=0, fetch=10                                                                                                                                              |
|               |           Projection: orders.o_orderkey                                                                                                                                      |
|               |             TableScan: orders projection=[o_orderkey]                                                                                                                        |
| physical_plan | SchemaCastScanExec                                                                                                                                                           |
|               |   CooperativeExec                                                                                                                                                            |
|               |     BytesProcessedExec                                                                                                                                                       |
|               |       VirtualExecutionPlan name=duckdb compute_context=:memory: base_sql=SELECT "c"."key" FROM (SELECT "orders"."o_orderkey" FROM "orders" LIMIT 10) AS "c" ("key") LIMIT 10 |
|               |                                                                                                                                                                              |
+---------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
